--- a/simple_inventory_system/src/main/webapp/WEB_INF/web.xml
+++ b/simple_inventory_system/src/main/webapp/WEB_INF/web.xml
@@ -1,39 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://java.sun.com/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-         version="3.0">
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+	version="3.0">
 
-    <!-- SignUpServlet Configuration -->
-    <welcome-file-list>
-    	<welcome-file>Sign_Up</welcome-file>
-    
-    </welcome-file-list>
-    <servlet>
-        <servlet-name>SignUp_servlet</servlet-name>
-        <servlet-class>simple_inventory_system.SignUp_servlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>SignUp_servlet</servlet-name>
-        <url-pattern>/SignUp_servlet</url-pattern>
-    </servlet-mapping>
-
-    <!-- LoginServlet Configuration -->
-    <servlet>
-        <servlet-name>LoginServlet</servlet-name>
-        <servlet-class>simple_inventory_system.LoginServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>LoginServlet</servlet-name>
-        <url-pattern>/LoginServlet</url-pattern>
-    </servlet-mapping>
-    <servlet>
-	    <servlet-name>welcome_servlet</servlet-name>
-	    <servlet-class>simple_inventory_system.welcome_servlet</servlet-class>
+	<!-- SignUpServlet Configuration -->
+	
+<welcome-file-list>
+    <welcome-file>signup.jsp</welcome-file>
+</welcome-file-list>
+	<servlet>
+		<servlet-name>SignUp_servlet</servlet-name>
+		<servlet-class>simple_inventory_system.SignUp_servlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
-	    <servlet-name>welcome_servlet</servlet-name>
-	    <url-pattern>/welcome_servlet</url-pattern>
+		<servlet-name>SignUp_servlet</servlet-name>
+		<url-pattern>/SignUp_servlet</url-pattern>
+	</servlet-mapping>
+
+	<!-- LoginServlet Configuration -->
+	<servlet>
+		<servlet-name>LoginServlet</servlet-name>
+		<servlet-class>simple_inventory_system.LoginServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>LoginServlet</servlet-name>
+		<url-pattern>/LoginServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>welcome_servlet</servlet-name>
+		<servlet-class>simple_inventory_system.welcome_servlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>welcome_servlet</servlet-name>
+		<url-pattern>/welcome_servlet</url-pattern>
 	</servlet-mapping>
 
 
