--- a/simple_inventory_system/pom.xml
+++ b/simple_inventory_system/pom.xml
@@ -43,12 +43,13 @@
         </dependency>
 
         <!-- Servlet API -->
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.1</version>
-            <scope>provided</scope>
-        </dependency>
+		<dependency>
+		    <groupId>jakarta.servlet</groupId>
+		    <artifactId>jakarta.servlet-api</artifactId>
+		    <version>6.0.0</version>  <!-- Adjust version based on your Tomcat version -->
+		    <scope>provided</scope>
+		</dependency>
+
     </dependencies>
 
     <build>
